update jupyter notebook

--- a/DSE_200X_MiniProject.ipynb
+++ b/DSE_200X_MiniProject.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f58fa37c",
+   "id": "b8bebec3",
    "metadata": {},
    "source": [
     "### aqui detalhar - Expenditure on Education"
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8d1ab337",
+   "id": "c6260447",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d47496",
+   "id": "2c32628d",
    "metadata": {},
    "source": [
     "I only need two columns - `Continent_Name` and `Three_Letter_Country_Code`"
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "49209ab1",
+   "id": "0a755422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2ea71bf6",
+   "id": "15620e86",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e80547d3",
+   "id": "c93c5127",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3d924b",
+   "id": "887997c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b3571d",
+   "id": "8c6629ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -821,11 +821,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c93c5bc8",
+   "id": "e83ff73f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(education_expenditure,x=\"Value\", y=\"Year\",animation_frame=\"Year\", \n",
+    "fig = px.scatter(df_expenditure_final,x=\"Value\", y=\"Year\",animation_frame=\"Year\", \n",
     " animation_group=”Country”,size=”Population”, \n",
     " color=”Continent_Name”,\n",
     " hover_name=”Country”, log_x=True, \n",
@@ -837,161 +837,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6c824c9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CountryCode</th>\n",
-       "      <th>ShortName</th>\n",
-       "      <th>TableName</th>\n",
-       "      <th>LongName</th>\n",
-       "      <th>Alpha2Code</th>\n",
-       "      <th>CurrencyUnit</th>\n",
-       "      <th>SpecialNotes</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>IncomeGroup</th>\n",
-       "      <th>Wb2Code</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GovernmentAccountingConcept</th>\n",
-       "      <th>ImfDataDisseminationStandard</th>\n",
-       "      <th>LatestPopulationCensus</th>\n",
-       "      <th>LatestHouseholdSurvey</th>\n",
-       "      <th>SourceOfMostRecentIncomeAndExpenditureData</th>\n",
-       "      <th>VitalRegistrationComplete</th>\n",
-       "      <th>LatestAgriculturalCensus</th>\n",
-       "      <th>LatestIndustrialData</th>\n",
-       "      <th>LatestTradeData</th>\n",
-       "      <th>LatestWaterWithdrawalData</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>Islamic State of Afghanistan</td>\n",
-       "      <td>AF</td>\n",
-       "      <td>Afghan afghani</td>\n",
-       "      <td>Fiscal year end: March 20; reporting period fo...</td>\n",
-       "      <td>South Asia</td>\n",
-       "      <td>Low income</td>\n",
-       "      <td>AF</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Consolidated central government</td>\n",
-       "      <td>General Data Dissemination System (GDDS)</td>\n",
-       "      <td>1979</td>\n",
-       "      <td>Multiple Indicator Cluster Survey (MICS), 2010/11</td>\n",
-       "      <td>Integrated household survey (IHS), 2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013/14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Republic of Albania</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Albanian lek</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe &amp; Central Asia</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Budgetary central government</td>\n",
-       "      <td>General Data Dissemination System (GDDS)</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>Demographic and Health Survey (DHS), 2008/09</td>\n",
-       "      <td>Living Standards Measurement Study Survey (LSM...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  CountryCode    ShortName    TableName                      LongName  \\\n",
-       "0         AFG  Afghanistan  Afghanistan  Islamic State of Afghanistan   \n",
-       "1         ALB      Albania      Albania           Republic of Albania   \n",
-       "\n",
-       "  Alpha2Code    CurrencyUnit  \\\n",
-       "0         AF  Afghan afghani   \n",
-       "1         AL    Albanian lek   \n",
-       "\n",
-       "                                        SpecialNotes                 Region  \\\n",
-       "0  Fiscal year end: March 20; reporting period fo...             South Asia   \n",
-       "1                                                NaN  Europe & Central Asia   \n",
-       "\n",
-       "           IncomeGroup Wb2Code  ...      GovernmentAccountingConcept  \\\n",
-       "0           Low income      AF  ...  Consolidated central government   \n",
-       "1  Upper middle income      AL  ...     Budgetary central government   \n",
-       "\n",
-       "               ImfDataDisseminationStandard LatestPopulationCensus  \\\n",
-       "0  General Data Dissemination System (GDDS)                   1979   \n",
-       "1  General Data Dissemination System (GDDS)                   2011   \n",
-       "\n",
-       "                               LatestHouseholdSurvey  \\\n",
-       "0  Multiple Indicator Cluster Survey (MICS), 2010/11   \n",
-       "1       Demographic and Health Survey (DHS), 2008/09   \n",
-       "\n",
-       "          SourceOfMostRecentIncomeAndExpenditureData  \\\n",
-       "0            Integrated household survey (IHS), 2008   \n",
-       "1  Living Standards Measurement Study Survey (LSM...   \n",
-       "\n",
-       "  VitalRegistrationComplete LatestAgriculturalCensus LatestIndustrialData  \\\n",
-       "0                       NaN                  2013/14                  NaN   \n",
-       "1                       Yes                     2012               2011.0   \n",
-       "\n",
-       "  LatestTradeData LatestWaterWithdrawalData  \n",
-       "0          2013.0                    2000.0  \n",
-       "1          2013.0                    2006.0  \n",
-       "\n",
-       "[2 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "country.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "622583b4",
+   "id": "d8ee2663",
    "metadata": {},
    "outputs": [],
    "source": []
